finish initial home page

--- a/pages/Home/home.css
+++ b/pages/Home/home.css
@@ -5,6 +5,7 @@ header {
     max-height: 80px;
     top: 0;
     left: 0;
+    z-index: 1;
 
     > nav {
         padding: 3rem 2rem;
@@ -12,6 +13,7 @@ header {
         max-height: inherit;
         justify-content: space-between;
         align-items: center;
+        background-color: white;
 
         box-shadow: 0px 0px 5px 3px rgb(0, 0, 0, 0.25);
         
@@ -52,5 +54,239 @@ header {
             display: flex;
             gap: 5rem;
         }
+    }
+}
+
+main {
+
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+
+    > section {
+        padding: 0 2rem; 
+    }
+
+    > section:first-child {
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 90px;
+        background-color: rgb(3, 167, 3);
+        height: 70vh;
+        gap: 25rem;
+        
+        border-radius: 0 0 50px 50px;
+
+        > div {
+
+            > h1 {
+
+                font-size: 3rem;
+            }
+
+            > p {
+                max-width: 400px;
+                font-size: 1.5rem;
+            }
+        }
+
+        figure {
+
+            width: 400px;
+            background-color: rgb(2, 136, .1);
+            padding: 3rem;
+            border-radius: 2rem;
+            img {
+    
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+
+    section:nth-child(2) {
+
+
+        > div:first-child {
+
+            display: flex;
+            justify-content: space-between;
+
+            > h2 {
+                font-size: 2rem;
+                font-weight: 500;
+                margin-bottom: 2rem;
+            }
+
+            > a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: .5rem;
+                font-size: 1.3rem;
+                color: var(--primary-green);
+                font-weight: 500;
+                 
+                > img {
+                    margin-bottom: -3px;
+                }
+            }
+
+        }
+
+        > div:last-child {
+
+            font-size: 1.2rem;
+            display: flex;
+            gap: 2rem;
+            flex-wrap: nowrap;
+
+
+            > section {
+                box-shadow: 0px 0px 5px 0px rgb(0, 0, 0, 0.25);
+
+                display: flex;
+                gap: 1rem;
+                min-width: 40rem;
+                border-radius: 1rem;
+
+                figure {
+
+                    width: 50%;
+                    height: 100%;
+                    border-radius: 1rem;
+
+                    img {
+                        object-fit: cover;
+                        border-radius: 1rem 2rem 2rem 1rem;
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+
+                > div {
+                    padding: 1rem;
+                    flex:1;
+                    display: flex;
+                    flex-direction: column;
+                    height: 100%;
+                    gap: 1rem;
+
+                    button {
+
+                        width: 100%;
+                        border: none;
+                        padding: 1rem;
+                        font-size: 1.2rem;
+                        background-color: var(--primary-green);
+                        border-radius: .5rem;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+
+    section:nth-child(3) {
+
+        > div:first-child {
+
+            display: flex;
+            justify-content: space-between;
+
+            > h2 {
+                font-size: 2rem;
+                font-weight: 500;
+                margin-bottom: 2rem;
+            }
+
+            > a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: .5rem;
+                font-size: 1.3rem;
+                color: var(--primary-green);
+                font-weight: 500;
+                 
+                > img {
+                    margin-bottom: -3px;
+                }
+            }
+        }
+
+        > div:last-child {
+
+            font-size: 1.2rem;
+            display: flex;
+            gap: 2rem;
+            flex-wrap: nowrap;
+
+
+            > section {
+                box-shadow: 0px 0px 5px 0px rgb(0, 0, 0, 0.25);
+
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                min-width: 20rem;
+                border-radius: 1rem;
+
+                figure {
+
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 1rem;
+
+                    img {
+                        object-fit: cover;
+                        border-radius: 1rem 1rem 2rem 2rem;
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+
+                > div {
+                    padding: 1rem;
+                    flex:1;
+                    display: flex;
+                    flex-direction: column;
+                    height: 100%;
+                    gap: 1rem;
+
+
+                    > div {
+                        display: flex;
+                        gap: .5rem;
+                        align-items: center;
+
+                        > figure {
+    
+                            width: 2rem;
+                            height: 2rem;
+                            
+                            > img {
+                                width: 100%;
+                                height: 100%;
+                                border-radius: inherit;
+                            }
+                        }
+                    }
+
+                    button {
+
+                        width: 100%;
+                        border: none;
+                        padding: 1rem;
+                        font-size: 1.2rem;
+                        background-color: var(--primary-green);
+                        border-radius: .5rem;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }  
     }
 }
