--- a/pages/Home/home.css
+++ b/pages/Home/home.css
@@ -113,11 +113,11 @@ main {
 
             display: flex;
             justify-content: space-between;
+            margin-bottom: 2rem;
 
             > h2 {
                 font-size: 2rem;
                 font-weight: 500;
-                margin-bottom: 2rem;
             }
 
             > a {
@@ -192,11 +192,14 @@ main {
 
             display: flex;
             justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2rem;
+
 
             > h2 {
                 font-size: 2rem;
                 font-weight: 500;
-                margin-bottom: 2rem;
+                align-self: center;
             }
 
             > a {
