initial footer created

--- a/pages/Home/home.css
+++ b/pages/Home/home.css
@@ -289,3 +289,15 @@ main {
         }  
     }
 }
+
+footer {
+
+    padding: 2rem;
+    margin-top: 5rem;
+    > p {
+        margin: 0 auto;
+        width: min-content;
+        text-wrap: nowrap;
+    }
+
+}
