--- a/index.css
+++ b/index.css
@@ -1,52 +1,47 @@
 body {
-    background-color: #7a38f4;
+    background-color: #4CAF50;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
 }
-
-.container{
-    background-color: #fa4f66;
+.container {
+    background-color: #F5F5F5;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     max-width: 400px;
     width: 100%;
 }
-h2{
+h2 {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 input {
     width: 100%;
     padding: 5px;
     margin: 10px 0;
-    border: 10px solid #ccc;
+    border: 1px solid #ccc;
     border-radius: 4px;
 }
-button{
+button {
     width: 100%;
     padding: 10px;
-    background-color: #77FF77;
+    background-color: #FFCB05;
     color: green;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-
 }
-button:hover{
+button:hover {
     background-color: #FFFF55 ;
 }
-.toggle{
+.toggle {
     text-align: center;
     margin-top: 20px;
 }
-.toggle a{
-    color: rgb(226, 255, 132);
+.toggle a {
+    color: rgb(255, 53, 53);
     text-decoration: none;
-}
-.toggle a:hover{
-    text-decoration: underline;
 }
