--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 body {
-    background-color: #4CAF50;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,41 +6,66 @@ body {
     margin: 0;
 }
 .container {
-    background-color: #F5F5F5;
-    padding: 20px;
+    padding: 2rem;
+    
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    max-width: 400px;
+    max-width: 600px;
+    max-height: 600px;
     width: 100%;
 }
 h2 {
-    text-align: center;
-    margin-bottom: 20px;
+    display: flex;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+
+    > span {
+        color: var(--primary-green);
+    }
+
 }
 input {
     width: 100%;
-    padding: 5px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    padding: 1rem;
+    font-size: 1rem;
+    color: var(--text-color);
+    margin: 8px 0;
+    border-radius: .5rem;
+    border: 1px solid var(--text-color);
+    background-color: initial;
+    transition: all .2s ease;
+
+    &:focus {
+        border: 1px solid var(--primary-green);
+        outline: 1px solid var(--primary-green);
+    }
 }
 button {
     width: 100%;
-    padding: 10px;
-    background-color: #FFCB05;
-    color: green;
+    padding: 1rem;
+    font-size: 1rem;
+    background-color: var(--primary-green);
     border: none;
-    border-radius: 4px;
+    border-radius: .5rem;
     cursor: pointer;
+
+    a {
+
+    color: white;
+
+    }
+
+    transition: all .2s ease;
 }
 button:hover {
-    background-color: #FFFF55 ;
+    background-color: #407c40 ;
 }
 .toggle {
     text-align: center;
     margin-top: 20px;
 }
 .toggle a {
-    color: rgb(255, 53, 53);
+    color: var(--primary-green);
     text-decoration: none;
+    font-weight: 700;
 }
