--- a/pages/Courses/courses.css
+++ b/pages/Courses/courses.css
@@ -73,6 +73,7 @@ main {
         > h1 {
             text-wrap: nowrap;
             font-size: 2rem;
+            font-weight: 600;
             margin-bottom: 1rem;
         }
         
@@ -136,6 +137,24 @@ main {
                 flex-direction: column;
                 height: 100%;
                 gap: 1rem;
+
+                > div {
+                    display: flex;
+                    gap: .5rem;
+                    align-items: center;
+
+                    > figure {
+
+                        width: 2rem;
+                        height: 2rem;
+                        
+                        > img {
+                            width: 100%;
+                            height: 100%;
+                            border-radius: inherit;
+                        }
+                    }
+                }
 
                 button {
 
