style: add max-width to initial tree img

--- a/pages/Home/home.css
+++ b/pages/Home/home.css
@@ -88,13 +88,14 @@ main {
 
             > p {
                 max-width: 400px;
-                font-size: 1.5rem;
+                font-size: 1.5rem;  
             }
         }
 
         figure {
 
-            width: 400px;
+            max-width: 400px;
+            max-height: 400px;
             background-color: rgb(2, 136, .1);
             padding: 3rem;
             border-radius: 2rem;
