--- a/pages/CreateSocialAction/CreateSocialAction.css
+++ b/pages/CreateSocialAction/CreateSocialAction.css
@@ -111,6 +111,12 @@ input:focus {
     justify-content: center;
     align-items: center;
     color: #777;
+    position: relative;
+}
+
+.map iframe {
+    width: 100%;
+    height: 100%;
 }
 
 .success-message {
